Fix: scrollbar always visible

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -70,7 +70,7 @@ html {
 }
 
 .transactions_table_container {
-  overflow-x: scroll;
+  overflow-x: auto;
   height: 100%;
 }
 
